# mysite

./: .djlintrc  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.jsonc  .mypy.ini  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  CONTRIBUTING.md  Makefile  QUALITY.md  README.md  docker-compose.dev.yml  mypy_precommit.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_demo.py
.github/: README.md
.github/workflows/: ci.yml  dependency-updates.yml  deploy.yml  quality-check.yml  release.yml  test-matrix.yml
apps/backend/: PRODUCTION_SETTINGS.py  validate_v1_ship.py
apps/backend/apps/blog/: admin.py  models.py  tests.py  urls.py  views.py
apps/backend/apps/contact/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/backend/apps/core/: CONFIG_IMPLEMENTATION_SUMMARY.md  CORE_INTEGRATION_OVERVIEW.md  REFACTORING_GUIDE.md  admin.py  apps.py  context_processors.py  context_processors.py.bak  decorators.py  logging.py  models.py  signals.py  urls.py  views.py
apps/backend/apps/pages/: admin.py  models.py  urls.py  views.py
apps/backend/apps/projects/: admin.py  models.py  tests.py  urls.py  views.py
apps/backend/config/: urls.py
apps/backend/config/settings/: base.py  dev.py  env.py  prod.py  staging.py  test.py
apps/backend/config/tests/: conftest.py  test_asgi.py  test_config_urls.py
apps/backend/templates/: base.html
apps/backend/templates/blog/: detail.html  list.html
apps/backend/templates/components/: breadcrumbs.html  footer.html  header.html  messages.html  navbar.html
apps/frontend/: .eslintrc.cjs  .prettierrc.json  eslint.config.broken  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: main.ts  style.css
apps/pages/: apps.py  urls.py  views.py
docs/: FORMATTING.md
scripts/: gentree  setup-github-cicd.sh  tree.py
tests/reports/frontend/: prettier.txt
tests/reports/python/: bandit.json
(+125 files in other folders)
