[project]
name = "mysite"
version = "0.1.0"
description = "Django + Vite starter with Tailwind and pre-commit tooling"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Your Name" }]
dependencies = [
  "Django>=5.2.6,<6.0",
  "python-dotenv>=1.0.0",
  # Configuration validation
  "pydantic>=2.0,<3.0",
  # Optional production server; useful when deploying
  "gunicorn>=21.2.0",
  "django-compressor>=4.5.1",
]

[project.optional-dependencies]
dev = [
  # Lint/format
  "ruff>=0.6.9",
  "djlint>=1.34.1",
  "pre-commit>=3.7.0",
  # Testing
  "pytest>=7.0.0",
  "pytest-django>=4.0.0",
  "pytest-cov>=4.0.0",
  "coverage>=7.6.0",
  # Django handy tools
  "django-extensions>=3.2.0",
  "django-debug-toolbar>=4.0.0",
  # Typing
  "mypy>=1.0.0",
  "django-stubs>=4.0.0",
  "types-requests",
  # Security scanning
  "detect-secrets>=1.5.0",
]
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["apps/backend"]
exclude = [
  "apps/frontend/**",
  "apps/backend/static/**",
  "apps/backend/staticfiles/**",
  "apps/backend/media/**",
  "apps/backend/apps/**/migrations/**",
]

[tool.ruff.lint]
extend-select = [
  "E",  # pycodestyle
  "W",
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "B",  # bugbear
]
ignore = [
  "E203", # allow Black-style slicing (Black compatibility)
]

[tool.ruff.lint.per-file-ignores]
"apps/backend/config/settings/dev.py" = ["F401", "F403"]
"apps/backend/config/settings/prod.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true

# djLint configuration moved to .djlintrc for centralized management

[tool.mypy]
python_version = "3.12"
show_error_codes = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"
mypy_path = ["apps/backend"]
namespace_packages = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.base"
